# NeuralNetwork

./: CMakeLists.txt  DataProcessing.cpp  HowItWorks.md  IntroToNeuralNetworks.md  NeuralNetwork.cpp  README.md  main.cpp
include/: DataProcessing.h  NeuralNetwork.h
src/: DataProcessing.cpp  NeuralNetwork.cpp  main.cpp
